--- a/NongSanShop/Views/Category/Index.cshtml
+++ b/NongSanShop/Views/Category/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<NongSanShop.Models.dh_category>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh mục";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-fluid">
-    <h3 class="text-dark mb-4">Category</h3>
+    <h3 class="text-dark mb-4">Danh mục</h3>
     <div class="card shadow">
         <div class="card-header py-3">
             <p class="text-primary m-0 font-weight-bold">
@@ -18,7 +18,7 @@
                 <div class="col-md-6 text-nowrap">
                     <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable">
                         <label>
-                            Show&nbsp;<select class="form-control form-control-sm custom-select custom-select-sm">
+                            Hiển thị&nbsp;<select class="form-control form-control-sm custom-select custom-select-sm">
                                 <option value="10" selected="">10</option>
                                 <option value="25">25</option>
                                 <option value="50">50</option>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="text-md-right dataTables_filter" id="dataTable_filter"><label><input type="search" class="form-control form-control-sm" aria-controls="dataTable" placeholder="Search"></label></div>
+                    <div class="text-md-right dataTables_filter" id="dataTable_filter"><label><input type="search" class="form-control form-control-sm" aria-controls="dataTable" placeholder="Tìm kiếm"></label></div>
                 </div>
             </div>
             <div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
@@ -36,19 +36,19 @@
                     <thead>
                         <tr>
                             <th>
-                                Avatar
+                                Hình ảnh
                             </th>
                             <th>
-                                Name
+                                Tên danh mục
                             </th>
                             <th>
-                                Description
+                                Mô tả
                             </th>
                             <th>
-                                Created
+                                Thời gian tạo
                             </th>
                             <th>
-                                Updated
+                                Thời gian cập nhật
                             </th>
                             <th></th>
                         </tr>
@@ -78,9 +78,9 @@
                                     @Html.DisplayFor(modelItem => item.updated)
                                 </td>
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                    @Html.ActionLink("Sửa", "Edit", new { id = item.id }) |
+                                    @Html.ActionLink("Chi tiết", "Details", new { id = item.id }) |
+                                    @Html.ActionLink("Xóa", "Delete", new { id = item.id })
                                 </td>
                             </tr>
                         }
@@ -89,27 +89,27 @@
                         <tr>
                             <td>
                                 <strong>
-                                    Avatar
+                                    Hình ảnh
                                 </strong>
                             </td>
                             <td>
                                 <strong>
-                                    Name
+                                    Tên danh mục
                                 </strong>
                             </td>
                             <td>
                                 <strong>
-                                    Description
+                                    Mô tả
                                 </strong>
                             </td>
                             <td>
                                 <strong>
-                                    Created
+                                    Thời gian tạo
                                 </strong>
                             </td>
                             <td>
                                 <strong>
-                                    Updated
+                                    Thời gian cập nhật
                                 </strong>
                             </td>
                             <td></td>
