--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
                 <div class="col-md-3">
                     <div class="products">
                         <a href="single-product.html">
-                            <img src="~/wwwroot/uploads/@item.avatar" alt="">
+                            <img src="~/wwwroot/uploads/products/@item.avatar" alt="">
                         </a>
                         <a href="single-product.html">
                             <h4>@item.name</h4>
