--- a/NongSanShop/Views/Admin/Info.cshtml
+++ b/NongSanShop/Views/Admin/Info.cshtml
@@ -6,44 +6,9 @@
 
 <div id="content">
     <div class="container-fluid">
-        <h3 class="text-dark mb-4">Profile</h3>
+        <h3 class="text-dark mb-4">Thông tin cá nhân</h3>
         <div class="row mb-3">
-            <div class="col-lg-4">
-                <div class="card mb-3">
-                    <div class="card-body text-center shadow">
-                        <img class="rounded-circle mb-3 mt-4" src="assets/img/dogs/image2.jpeg" width="160" height="160">
-                        <div class="mb-3"><button class="btn btn-primary btn-sm" type="button">Change Photo</button></div>
-                    </div>
-                </div>
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                        <h6 class="text-primary font-weight-bold m-0">Projects</h6>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="small font-weight-bold">Server migration<span class="float-right">20%</span></h4>
-                        <div class="progress progress-sm mb-3">
-                            <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="sr-only">20%</span></div>
-                        </div>
-                        <h4 class="small font-weight-bold">Sales tracking<span class="float-right">40%</span></h4>
-                        <div class="progress progress-sm mb-3">
-                            <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="sr-only">40%</span></div>
-                        </div>
-                        <h4 class="small font-weight-bold">Customer Database<span class="float-right">60%</span></h4>
-                        <div class="progress progress-sm mb-3">
-                            <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60%</span></div>
-                        </div>
-                        <h4 class="small font-weight-bold">Payout Details<span class="float-right">80%</span></h4>
-                        <div class="progress progress-sm mb-3">
-                            <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">80%</span></div>
-                        </div>
-                        <h4 class="small font-weight-bold">Account setup<span class="float-right">Complete!</span></h4>
-                        <div class="progress progress-sm mb-3">
-                            <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <div class="row mb-3 d-none">
                     <div class="col">
                         <div class="card text-white bg-primary shadow">
@@ -78,67 +43,46 @@
                     <div class="col">
                         <div class="card shadow mb-3">
                             <div class="card-header py-3">
-                                <p class="text-primary m-0 font-weight-bold">User Settings</p>
+                                <p class="text-primary m-0 font-weight-bold">Thiết lập người dùng</p>
                             </div>
                             <div class="card-body">
                                 <form>
                                     <div class="form-row">
                                         <div class="col">
-                                            <div class="form-group"><label for="username"><strong>Username</strong></label><input class="form-control" type="text" id="username" placeholder="user.name" name="username"></div>
+                                            <div class="form-group"><label for="username"><strong>Tên tài khoản</strong></label><input class="form-control" type="text" id="username" placeholder="user.name" name="username"></div>
                                         </div>
                                         <div class="col">
-                                            <div class="form-group"><label for="email"><strong>Email Address</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email"></div>
+                                            <div class="form-group"><label for="email"><strong>Email</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email"></div>
                                         </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col">
-                                            <div class="form-group"><label for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name"></div>
+                                            <div class="form-group"><label for="first_name"><strong>Tên</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name"></div>
                                         </div>
                                         <div class="col">
-                                            <div class="form-group"><label for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name"></div>
+                                            <div class="form-group"><label for="last_name"><strong>Họ</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name"></div>
                                         </div>
                                     </div>
-                                    <div class="form-group"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
+                                    <div class="form-group"><button class="btn btn-primary btn-sm" type="submit">Lưu</button></div>
                                 </form>
                             </div>
                         </div>
                         <div class="card shadow">
                             <div class="card-header py-3">
-                                <p class="text-primary m-0 font-weight-bold">Contact Settings</p>
+                                <p class="text-primary m-0 font-weight-bold">Liên lạc</p>
                             </div>
                             <div class="card-body">
                                 <form>
-                                    <div class="form-group"><label for="address"><strong>Address</strong></label><input class="form-control" type="text" id="address" placeholder="Sunset Blvd, 38" name="address"></div>
+                                    <div class="form-group"><label for="address"><strong>Địa chỉ</strong></label><input class="form-control" type="text" id="address" placeholder="" name="address"></div>
                                     <div class="form-row">
                                         <div class="col">
-                                            <div class="form-group"><label for="city"><strong>City</strong></label><input class="form-control" type="text" id="city" placeholder="Los Angeles" name="city"></div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="form-group"><label for="country"><strong>Country</strong></label><input class="form-control" type="text" id="country" placeholder="USA" name="country"></div>
+                                            <div class="form-group"><label for="city"><strong>Thành phố</strong></label><input class="form-control" type="text" id="city" placeholder="" name="city"></div>
                                         </div>
                                     </div>
-                                    <div class="form-group"><button class="btn btn-primary btn-sm" type="submit">Save&nbsp;Settings</button></div>
+                                    <div class="form-group"><button class="btn btn-primary btn-sm" type="submit">Lưu</button></div>
                                 </form>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card shadow mb-5">
-            <div class="card-header py-3">
-                <p class="text-primary m-0 font-weight-bold">Forum Settings</p>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <form>
-                            <div class="form-group"><label for="signature"><strong>Signature</strong><br></label><textarea class="form-control" id="signature" rows="4" name="signature"></textarea></div>
-                            <div class="form-group">
-                                <div class="custom-control custom-switch"><input class="custom-control-input" type="checkbox" id="formCheck-1"><label class="custom-control-label" for="formCheck-1"><strong>Notify me about new replies</strong></label></div>
-                            </div>
-                            <div class="form-group"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
-                        </form>
                     </div>
                 </div>
             </div>
