--- a/NongSanShop/Views/Cart/Delete.cshtml
+++ b/NongSanShop/Views/Cart/Delete.cshtml
@@ -1,10 +1,9 @@
-﻿@model NongSanShop.Models.dh_user
+﻿@model NongSanShop.Models.dh_cart
 
 @{
-    ViewBag.Title = "Tài khoản";
+    ViewBag.Title = "Giỏ hàng";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
 
 <div class="container-fluid" style="text-align:center;">
     <h3>Are you sure you want to delete this?</h3>
@@ -20,3 +19,5 @@
         }
     </div>
 </div>
+
+
