--- a/NongSanShop/Views/Category/Delete.cshtml
+++ b/NongSanShop/Views/Category/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NongSanShop.Models.dh_category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Danh mục";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -14,7 +14,7 @@
 
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-danger" /> |
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Quay lại", "Index")
             </div>
         }
     </div>
