--- a/NongSanShop/Views/Category/Edit.cshtml
+++ b/NongSanShop/Views/Category/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NongSanShop.Models.dh_category
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Danh mục";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -10,13 +10,13 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
-            <h4>dh_category</h4>
+            <h4>Sửa</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.id)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Tên danh mục</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Mô tả</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.created, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Thời gian tạo</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.created, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.updated, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Thời gian cập nhật</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Ảnh minh họa</label>
                 @{
                     string ImagePath = "~/wwwroot/uploads/categories/" + Model.avatar;
                 }
@@ -60,7 +60,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Lưu" class="btn btn-success" />
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Quay lại", "Index")
     </div>
 </div>
 
