--- a/NongSanShop/Views/Product/Create.cshtml
+++ b/NongSanShop/Views/Product/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NongSanShop.Models.dh_product
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Sản phẩm";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -11,11 +11,11 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Product</h4>
+            <h4>Thêm mới</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Tên sản phẩm</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Mô tả</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
@@ -31,7 +31,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Giá</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
@@ -39,7 +39,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Số lượng</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
@@ -47,7 +47,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.category_id, "category_id", htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Tên danh mục</label>
                 <div class="col-md-10">
                     @Html.DropDownList("category_id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.category_id, "", new { @class = "text-danger" })
@@ -55,7 +55,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Hình ảnh</label>
                 <div class="col-md-10">
                     <img id="output" alt="avatar" width="200" height="220" src="~/wwwroot/uploads/products/no_avatar.png">
                     <p>
@@ -66,7 +66,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.created, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Thời gian tạo</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.created, "", new { @class = "text-danger" })
@@ -74,7 +74,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.updated, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class="control-label col-md-2">Thời gian cập nhật</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
@@ -83,14 +83,14 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Thêm mới" class="btn btn-success" />
                 </div>
             </div>
         </div>
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Quay lại", "Index")
     </div>
 </div>
 
