feature - add log4net, trace log when edit or delete record, display time and check image when edit

--- a/NongSanShop/Views/Blog/Details.cshtml
+++ b/NongSanShop/Views/Blog/Details.cshtml
@@ -30,8 +30,10 @@
                 Thời gian tạo
             </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.created)
+            <dd>@{
+                    var timeStampCreated = Model.created;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString("MM/dd/yyyy"))
+                }
             </dd>
 
             <dt>
@@ -39,7 +41,10 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.updated)
+                @{
+                    var timeStampUpdated = Model.updated;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString("MM/dd/yyyy"))
+                }
             </dd>
 
         </dl>
