--- a/NongSanShop/Views/Blog/Create.cshtml
+++ b/NongSanShop/Views/Blog/Create.cshtml
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 <label class="control-label col-md-2">Thời gian tạo</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
@@ -45,7 +45,7 @@
                     @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
