--- a/NongSanShop/Views/Category/Details.cshtml
+++ b/NongSanShop/Views/Category/Details.cshtml
@@ -31,7 +31,10 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.created)
+                @{
+                    var timeStampCreated = Model.created;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString())
+                }
             </dd>
 
             <dt>
@@ -39,7 +42,10 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.updated)
+                @{
+                    var timeStampUpdated = Model.updated;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString())
+                }
             </dd>
 
             <dt>
