--- a/NongSanShop/Views/Order/Index.cshtml
+++ b/NongSanShop/Views/Order/Index.cshtml
@@ -60,10 +60,16 @@
             @Html.DisplayFor(modelItem => item.status)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.created)
+            @{
+                var timeStampCreated = item.created;
+                @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString())
+            }
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.updated)
+            @{
+                var timeStampUpdated = item.updated;
+                @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString())
+            }
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
