--- a/NongSanShop/Views/Order/Create.cshtml
+++ b/NongSanShop/Views/Order/Create.cshtml
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.created, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.created, new { htmlAttributes = new { @class = "form-control" } })
@@ -78,7 +78,7 @@
                 @Html.EditorFor(model => model.updated, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.updated, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
