--- a/NongSanShop/Views/Product/Details.cshtml
+++ b/NongSanShop/Views/Product/Details.cshtml
@@ -63,7 +63,10 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.created)
+                @{
+                    var timeStampCreated = Model.created;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampCreated.GetValueOrDefault()).ToString());
+                }
             </dd>
 
             <dt>
@@ -71,7 +74,10 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.updated)
+                @{
+                    var timeStampUpdated = Model.updated;
+                    @Html.Display(DateTimeOffset.FromUnixTimeSeconds(timeStampUpdated.GetValueOrDefault()).ToString());
+                }
             </dd>
 
         </dl>
